# siem-pipeline

./: .gitignore  LICENSE  README.md  main.py  nixpacks.toml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
config/: rules_config.yaml
data/raw/: auth_logs.json  cloudtrail_sample.jsonl  firewall_logs.csv
data/sample_output/: alerts.json  normalized_events.json  summary.json
siem_pipeline/: cli.py  db.py
siem_pipeline/parsers/: __init__.py
siem_pipeline/rules/: __init__.py  engine.py
siem_pipeline/utils/: __init__.py  schema.py
src/siem_pipeline/: __init__.py  pipeline.py
src/siem_pipeline/normalizers/: __init__.py  normalizer.py
src/siem_pipeline/parsers/: base.py  csv_parser.py  json_parser.py
src/siem_pipeline/rules/: base.py  builtin_rules.py
src/siem_pipeline/utils/: logger.py
tests/: conftest.py  test_db.py  test_normalizer.py  test_parsers.py  test_pipeline.py  test_rules.py
