[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "siem-pipeline"
version = "0.1.0"
description = "Mini SIEM-style security data pipeline"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
siem-pipeline = "siem_pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["siem_pipeline*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
log_cli = false

[tool.coverage.run]
source = ["siem_pipeline"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
